--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
      <Compile Include="Assets\Scripts\Engine\Shooting.cs" />
      <Compile Include="Assets\Scripts\LevelGenerator\ColorToPrefs.cs" />
      <Compile Include="Assets\Scripts\LevelGenerator\LevelGenerator.cs" />
+     <Compile Include="Assets\Scripts\Menus\GameOver.cs" />
      <Compile Include="Assets\Scripts\Menus\MainMenu.cs" />
      <Compile Include="Assets\Scripts\Menus\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\Menus\SettingsMenu.cs" />
