--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\EffectExamples\Shared\Scripts\ParticleCollision.cs" />
      <Compile Include="Assets\EffectExamples\Shared\Scripts\ParticleExamples.cs" />
      <Compile Include="Assets\EffectExamples\Shared\Scripts\ParticleMenu.cs" />
+     <Compile Include="Assets\Scripts\Engine\AudioManager.cs" />
      <Compile Include="Assets\Scripts\Engine\BulletControl.cs" />
      <Compile Include="Assets\Scripts\Engine\CameraController.cs" />
      <Compile Include="Assets\Scripts\Engine\GroundGenerator.cs" />
@@ -69,6 +70,7 @@
      <Compile Include="Assets\Scripts\Engine\PlayerController.cs" />
      <Compile Include="Assets\Scripts\Engine\PlayerHealth.cs" />
      <Compile Include="Assets\Scripts\Engine\Shooting.cs" />
+     <Compile Include="Assets\Scripts\Engine\Sound.cs" />
      <Compile Include="Assets\Scripts\LevelGenerator\ColorToPrefs.cs" />
      <Compile Include="Assets\Scripts\LevelGenerator\LevelGenerator.cs" />
      <Compile Include="Assets\Scripts\LevelGenerator\PlayerPrefsManager.cs" />
